infra/k8s-prod/ingress-svc.yaml
# Important: Point: Must run the initial setup command before feeding this file to kubectl. Setup command is available in the ingress-nginx docs for different vendors.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev # Add localhost/minikube ip (minikube ip) to the etc/hosts file -> 192.168.49.2    ticketing.dev
      # In Mac -> 127.0.0.1 ticketing.dev
      # Important: Don't forget to install the ingress-nginx addon -> kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.4.0/deploy/static/provider/cloud/deploy.yaml
      http:
        paths:
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-svc
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ticket-svc
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
